--- a/index.html
+++ b/index.html
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>My first website</title>
 </head>
+
 <body>
-    
+
     <header>
-        <h3>Alejandro Rodríguez</h3>
+        <h3>Alejandro Rodríguez, Future Full Stack Web Developer</h3>
         <img id="logo" src="img/logo.png">
     </header>
 
     <navbar>
         <ul>
-            <li><a>Home</a></li>
-            <li><a>Blog</a></li>
-            <li><a>About me</a></li>
             <li><a>Contact</a></li>
+            <li><a>About me</a></li>
+            <li><a>Blog</a></li>
+            <li><a>Home</a></li>
         </ul>
     </navbar>
 
+    <main id="main-container">
+        <h1>This is my first website :D</h1>
+        <div class="img">
+            <img id="first-img" src="img/Phone.png" alt="galaxy s11/s20 plus leaked!">
+            <h2>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!</h2>
+        </div>
+
+            <img class="box1" src="img/Debit_card_ATM.jpg" alt="debit card">
+            <img class="box2" src="img/Taxify-Scooters.jpg" alt="taxify scooters">
+            <h2 class="text1">Police are investigating three ATM explosions in two Florida counties</h2>
+            <h2 class="text2">E-scooter firm Bolt pulls out of 12 cities</h2>
+            <div style="clear: both;"></div> 
+        </main>
+
+    <footer>
+        <img id="footer-img" src="img/logo.png" alt ="logo">
+        <p>Alejandro Rodríguez, CodeFactory 2020</p>
+    </footer>
+
 </body>
+
 </html>
