--- a/index.html
+++ b/index.html
@@ -9,20 +9,22 @@
 </head>
 
 <body>
-
+    
     <header>
         <h3>Alejandro Rodríguez, Future Full Stack Web Developer</h3>
         <img id="logo" src="img/logo.png">
     </header>
 
+
     <navbar>
         <ul>
-            <li><a>Contact</a></li>
-            <li><a>About me</a></li>
-            <li><a>Blog</a></li>
-            <li><a>Home</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="about me.html">About me</a></li>
+            <li><a href="blog.html">Blog</a></li>
+            <li><a href="index.html">Home</a></li>
         </ul>
     </navbar>
+
 
     <main id="main-container">
         <h1>This is my first website :D</h1>
@@ -31,15 +33,16 @@
             <h2>Samsung Galaxy S11/S20 Plus video leaks showing phone in real life!</h2>
         </div>
 
-            <img class="box1" src="img/Debit_card_ATM.jpg" alt="debit card">
-            <img class="box2" src="img/Taxify-Scooters.jpg" alt="taxify scooters">
-            <h2 class="text1">Police are investigating three ATM explosions in two Florida counties</h2>
-            <h2 class="text2">E-scooter firm Bolt pulls out of 12 cities</h2>
-            <div style="clear: both;"></div> 
-        </main>
+        <img class="box1" src="img/Debit_card_ATM.jpg" alt="debit card">
+        <img class="box2" src="img/Taxify-Scooters.jpg" alt="taxify scooters">
+        <h2 class="text1">Police are investigating three ATM explosions in two Florida counties</h2>
+        <h2 class="text2">E-scooter firm Bolt pulls out of 12 cities</h2>
+        <div style="clear: both;"></div>
+    </main>
+
 
     <footer>
-        <img id="footer-img" src="img/logo.png" alt ="logo">
+        <img id="footer-img" src="img/logo.png" alt="logo">
         <p>Alejandro Rodríguez, CodeFactory 2020</p>
     </footer>
 
